--- a/parser-js/package.json
+++ b/parser-js/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node index.js",
-    "test": "jest",
-    "prepare": "npm run build"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/preset-react": "^7.26.3",
